minor menu updates, page admin/base cleanup

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/menu/top2/TopMenuBar.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/menu/top2/TopMenuBar.html
@@ -32,7 +32,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li wicket:id="topMenuBar">    <!-- todo class "active" for active item -->
-                        <a wicket:id="barItemLink">
+                        <a wicket:id="barItemLink" class="main-menu-item">
                             <span wicket:id="label"/>&nbsp;<b class="caret" wicket:id="caret"/>
                         </a>
                         <ul class="dropdown-menu">
