--- a/gui/admin-gui/src/main/webapp/less/midpoint/top-menu.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/top-menu.less
@@ -18,7 +18,7 @@ div.navbar {
 
   div.navbar-collapse.collapse ul li a.dropdown-toggle,
   a.main-menu-item {
-//    font-weight: bold;
+    font-weight: bold;
 //    color: @color2;
   }
 }
