dashboard page improved, not finished yet.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/AsyncDashboardPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/AsyncDashboardPanel.html
@@ -17,11 +17,11 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <div>
-        <div class="dashboard-title" wicket:id="dashboardTitle">
-            <span wicket:id="title"/>
+    <div class="panel panel-default">
+        <div class="panel-heading" wicket:id="dashboardTitle">
+            <h3 class="panel-title"><i class="silk-user"></i>&nbsp;<span wicket:id="title"/></h3>
         </div>
-        <div class="dashboard-content" wicket:id="dashboardContent">
+        <div class="panel-body" wicket:id="dashboardContent">
             <div wicket:id="preloaderContainer" style="text-align: center;">
                 <img wicket:id="preloader"/>
             </div>
