--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/PersonalInfoPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/PersonalInfoPanel.html
@@ -17,22 +17,31 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <table style="width: 100%;">
+    <table>
         <tr>
-            <td style="width: 50%;"><wicket:message key="PersonalInfoPanel.lastLoginDate"/></td>
+            <td colspan="2"><b><wicket:message key="PersonalInfoPanel.lastLogin"/></b></td>
+        </tr>
+        <tr>
+            <td><wicket:message key="PersonalInfoPanel.lastLogin.date"/></td>
             <td><span wicket:id="lastLoginDate"/></td>
         </tr>
         <tr>
-            <td><wicket:message key="PersonalInfoPanel.lastLoginFrom"/></td>
+            <td><wicket:message key="PersonalInfoPanel.lastLogin.from"/></td>
             <td><span wicket:id="lastLoginFrom"/></td>
         </tr>
         <tr>
-            <td><wicket:message key="PersonalInfoPanel.lastFailDate"/></td>
+            <td colspan="2"><b><wicket:message key="PersonalInfoPanel.lastFail"/></b></td>
+        </tr>
+        <tr>
+            <td><wicket:message key="PersonalInfoPanel.lastFail.date"/></td>
             <td><span wicket:id="lastFailDate"/></td>
         </tr>
         <tr>
-            <td><wicket:message key="PersonalInfoPanel.lastFailFrom"/></td>
+            <td><wicket:message key="PersonalInfoPanel.lastFail.from"/></td>
             <td><span wicket:id="lastFailFrom"/></td>
+        </tr>
+        <tr>
+            <td colspan="2"><b><wicket:message key="PersonalInfoPanel.other"/></b></td>
         </tr>
         <tr>
             <td><wicket:message key="PersonalInfoPanel.passwordExp"/></td>
