login page done.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/menu/top2/TopMenuBar.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/menu/top2/TopMenuBar.html
@@ -43,17 +43,19 @@
                     </li>
                 </ul>
 
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">Viliam Repan&nbsp;<b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="profile.php">Edit profile</a></li>
-                            <li><a href="my-passwords.php">Reset passwords</a></li>
-                            <li class="divider"></li>
-                            <li><a href="login.php">Logout</a></li>
-                        </ul>
-                    </li>
-                </ul>
+                <div wicket:id="rightPanel"/>
+
+                <!--<ul class="nav navbar-nav navbar-right">-->
+                    <!--<li class="dropdown">-->
+                        <!--<a data-toggle="dropdown" class="dropdown-toggle" href="#">Viliam Repan&nbsp;<b class="caret"></b></a>-->
+                        <!--<ul class="dropdown-menu">-->
+                            <!--<li><a href="profile.php">Edit profile</a></li>-->
+                            <!--<li><a href="my-passwords.php">Reset passwords</a></li>-->
+                            <!--<li class="divider"></li>-->
+                            <!--<li><a href="login.php">Logout</a></li>-->
+                        <!--</ul>-->
+                    <!--</li>-->
+                <!--</ul>-->
             </div>
             <!--/.nav-collapse -->
         </div>
