--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/login/LocalePanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/login/LocalePanel.html
@@ -17,10 +17,19 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <ul wicket:id="locale" class="locales">
-        <li wicket:id="locales" class="locale">
-            <a wicket:id="localeLink" class="localeLink">&nbsp;</a>
-        </li>
-    </ul>
+    <select wicket:id="select" class="selectpicker select-picker-sm pull-right" data-width="auto">
+        <!--<option data-icon="flag-gb">&nbsp;English</option>-->
+        <!--<option data-icon="flag-sk">&nbsp;Slovensky</option>-->
+
+        <wicket:container wicket:id="options">
+            <option wicket:id="option">Option Label</option>
+        </wicket:container>
+    </select>
+
+    <!--<ul wicket:id="locale" class="locales">-->
+        <!--<li wicket:id="locales" class="locale">-->
+            <!--<a wicket:id="localeLink" class="localeLink">&nbsp;</a>-->
+        <!--</li>-->
+    <!--</ul>-->
 </wicket:panel>
 </html>
