--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/login/LabeledBookmarkableLink.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/login/LabeledBookmarkableLink.html
@@ -17,16 +17,6 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-            <a data-toggle="dropdown" class="dropdown-toggle" href="#"><span wicket:id="username"/>&nbsp;<b class="caret"></b></a>
-            <ul class="dropdown-menu">
-                <li><div wicket:id="editProfile" /></li>
-                <li><div wicket:id="resetPasswords" /></li>
-                <li class="divider"></li>
-                <li><a wicket:id="logoutLink"/></li>
-            </ul>
-        </li>
-    </ul>
+    <a wicket:id="link"><span wicket:id="label"/></a>
 </wicket:panel>
 </html>
