--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/DashboardPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/DashboardPanel.html
@@ -17,7 +17,7 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <div class="panel panel-default">
+    <div class="panel" wicket:id="dashboardParent">
         <div class="panel-heading" wicket:id="dashboardTitle">
             <h3 class="panel-title"><i class="silk-user"></i>&nbsp;<span wicket:id="title"/></h3>
         </div>
