table panel count toolbar and css fixes, still not finished yet

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/data/paging/NavigatorPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/data/paging/NavigatorPanel.html
@@ -19,13 +19,13 @@
 <wicket:panel>
     <div style="text-align: center;">
         <ul class="pagination pagination-sm">
-            <li wicket:id="previous"><a wicket:id="previousLink"><wicket:message key="NavigatorPanel2.previous"/></a></li>
-            <li wicket:id="first"><a wicket:id="firstLink"><wicket:message key="NavigatorPanel2.first"/></a></li>
-            <li wicket:id="dots" class="disabled"><span><wicket:message key="NavigatorPanel2.dots"/></span></li>
+            <li wicket:id="previous"><a wicket:id="previousLink"><wicket:message key="NavigatorPanel.previous"/></a></li>
+            <li wicket:id="first"><a wicket:id="firstLink"><wicket:message key="NavigatorPanel.first"/></a></li>
+            <li wicket:id="dots" class="disabled"><span><wicket:message key="NavigatorPanel.dots"/></span></li>
             <li wicket:id="navigation">
                 <a wicket:id="pageLink"/>
             </li>
-            <li wicket:id="next"><a wicket:id="nextLink"><wicket:message key="NavigatorPanel2.next"/></a></li>
+            <li wicket:id="next"><a wicket:id="nextLink"><wicket:message key="NavigatorPanel.next"/></a></li>
         </ul>
     </div>
 </wicket:panel>
