--- a/gui/admin-gui/src/main/webapp/less/midpoint/page-user-details.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/page-user-details.less
@@ -93,11 +93,6 @@ table.table {
 
   td, th {
 
-    &.icon {
-      width: 22px;
-      padding-top: 11px;
-    }
-
     &.cog {
       width: 68px;
       vertical-align: bottom;
@@ -117,6 +112,11 @@ table.table {
       font-size: 1.3em;
       margin-top: 4px;
     }
+  }
+
+  th.icon {
+    width: 22px;
+    padding-top: 11px;
   }
 }
 
