bootswatch integration and sample, minor paging and table css fixes

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/data/CountToolbar.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/data/CountToolbar.html
@@ -18,9 +18,8 @@
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
     <tr>
-        <!-- todo background-color to less files [lazyman] -->
-        <td wicket:id="td" style="text-align: right; background-color: #fafafa;">
-            <span wicket:id="count" />
+        <td wicket:id="td" style="text-align: right;">
+            <span wicket:id="count"/>
         </td>
     </tr>
 </wicket:panel>
