--- a/gui/admin-gui/src/main/webapp/less/bootstrap/bootstrap.less
+++ b/gui/admin-gui/src/main/webapp/less/bootstrap/bootstrap.less
@@ -10,6 +10,7 @@
 
 // Core variables and mixins
 @import "variables.less";
+//@import "../custom/variables.less";
 @import "mixins.less";
 
 // Reset
@@ -53,6 +54,9 @@
 @import "tooltip.less";
 @import "popovers.less";
 @import "carousel.less";
+
+//bootswatch
+//@import "../custom/bootswatch.less";
 
 // Utility classes
 @import "utilities.less";
