refactoring, class moving.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/AsyncDashboardPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/AsyncDashboardPanel.html
@@ -24,6 +24,7 @@
         <div class="panel-body" wicket:id="dashboardContent">
             <div wicket:id="preloaderContainer" style="text-align: center;">
                 <img wicket:id="preloader"/>
+                <wicket:message key="AsyncDashboardPanel.loading"/>
             </div>
             <div wicket:id="content"/>
         </div>
