more logging updates.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/TabbedPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/TabbedPanel.html
@@ -16,7 +16,7 @@
   -->
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
 <ul class="nav nav-tabs" wicket:id="tabs-container">
-	<li wicket:id="tabs"><a data-toggle="tab" wicket:id="link"><span wicket:id="title"/></a></li>
+	<li wicket:id="tabs"><a href="#" wicket:id="link"><span wicket:id="title"/></a></li>
 </ul>
 <div class="tab-content">
     <div wicket:id="panel" class="tab-pane active" />
