--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/TextPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/TextPanel.html
@@ -17,6 +17,6 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <input wicket:id="input" type="text"/>
+    <input wicket:id="input" class="form-control input-sm" type="text"/>
 </wicket:panel>
 </html>
