--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/DashboardPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/DashboardPanel.html
@@ -19,7 +19,7 @@
 <wicket:panel>
     <div class="panel" wicket:id="dashboardParent">
         <div class="panel-heading" wicket:id="dashboardTitle">
-            <h3 class="panel-title"><i class="silk-user"></i>&nbsp;<span wicket:id="title"/></h3>
+            <h3 class="panel-title"><i wicket:id="icon"></i>&nbsp;<span wicket:id="title"/></h3>
         </div>
         <div class="panel-body" wicket:id="dashboardContent">
             <div wicket:id="content"/>
