ace editor fixed.

--- a/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
@@ -16,6 +16,14 @@ div.aceEditor {
   border: 1px solid #ccc;
   width: auto;
   height: 0px;
+
+  .ace_scroller {
+    background: #fff;
+
+    &.disabled {
+      background: #f4f4f4;
+    }
+  }
 }
 
 th h3 {
