ace editor fixes, debug view refactored.

--- a/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
@@ -17,12 +17,8 @@ div.aceEditor {
   width: auto;
   height: 0px;
 
-  .ace_scroller {
-    background: #fff;
-
-    &.disabled {
-      background: #f4f4f4;
-    }
+  &.disabled .ace_scroller {
+    background: #f4f4f4;
   }
 }
 
