inline menu implementation + sample, more less/css fixes.

--- a/gui/admin-gui/src/main/webapp/less/bootstrap/bootstrap.less
+++ b/gui/admin-gui/src/main/webapp/less/bootstrap/bootstrap.less
@@ -10,7 +10,7 @@
 
 // Core variables and mixins
 @import "variables.less";
-//@import "../custom/variables.less";
+@import "../custom/variables.less";
 @import "mixins.less";
 
 // Reset
@@ -56,7 +56,7 @@
 @import "carousel.less";
 
 //bootswatch
-//@import "../custom/bootswatch.less";
+@import "../custom/bootswatch.less";
 
 // Utility classes
 @import "utilities.less";
