--- a/gui/admin-gui/src/main/webapp/less/custom/bootswatch.less
+++ b/gui/admin-gui/src/main/webapp/less/custom/bootswatch.less
@@ -1,3 +1,5 @@
+//now disabled, ready for custom styling.
+/*
 // Slate 3.0.0
 // Bootswatch
 // -----------------------------------------------------
@@ -322,3 +324,4 @@ legend {
     border-color: #000;
   }
 }
+*/
