--- a/gui/admin-gui/src/main/webapp/less/custom/variables.less
+++ b/gui/admin-gui/src/main/webapp/less/custom/variables.less
@@ -1,3 +1,6 @@
+//now disabled, ready for custom styling.
+/*
+
 // Slate 3.0.0
 // Variables
 // --------------------------------------------------
@@ -618,3 +621,6 @@
 
 // Large screen / wide desktop
 @container-lg-desktop:        ((1140px + @grid-gutter-width));
+
+
+*/
