--- a/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
@@ -1,3 +1,7 @@
+@import "../bootstrap/variables.less";
+@import "../custom/variables.less";
+@import "../bootstrap/mixins.less";
+
 @import "top-menu.less";
 @import "wizard.less";
 @import "page-login.less";
