--- a/gui/admin-gui/src/main/webapp/less/midpoint/wizard.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/wizard.less
@@ -26,7 +26,7 @@
     height: 0;
     border-top: 20px inset transparent;
     border-bottom: 20px inset transparent;
-    border-left: 20px solid @body-background;
+    border-left: 20px solid @body-bg;
     position: absolute;
     content: "";
     top: 0;
