css fix for version info and ajax status.

--- a/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
@@ -13,6 +13,12 @@ span.button-group {
   margin-right: 30px;
 }
 
+.version-info {
+  margin-top: 40px;
+  padding-right: 20px;
+  font-size: 0.8em;
+}
+
 /*
  * editor
  */
