--- a/gui/admin-gui/src/main/webapp/less/midpoint/bootstrap-override.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/bootstrap-override.less
@@ -8,16 +8,14 @@
 }
 
 //dropdown-menu disabled span fix
-.dropdown-menu {
-  > li > span {
+.dropdown-menu > .disabled > span {
     display: block;
     padding: 3px 20px;
     clear: both;
     font-weight: normal;
     line-height: @line-height-base;
     color: @dropdown-link-color;
-    white-space: nowrap; // prevent links from randomly breaking onto new lines
-  }
+    white-space: nowrap;
 }
 .dropdown-menu > .disabled > span {
   &,
@@ -25,15 +23,12 @@
     color: @dropdown-link-disabled-color;
   }
 }
-// Nuke hover/focus effects
-.dropdown-menu > .disabled > span {
-  &:hover {
+.dropdown-menu > .disabled > span:hover {
     text-decoration: none;
     background-color: transparent;
     background-image: none; // Remove CSS gradient
     .reset-filter();
     cursor: not-allowed;
-  }
 }
 
 //select,
