user list page search, not finished yet. also execute options - finished.

--- a/gui/admin-gui/src/main/webapp/css/evolveum.css
+++ b/gui/admin-gui/src/main/webapp/css/evolveum.css
@@ -396,6 +396,8 @@ input:focus, .button:focus, select:focus, option:focus {
 	display: block;
 	z-index: 4;
 	bottom: 5px;
+    padding: 3px;
+    background-color: #f00;
 }
 
 .operatingFormButtons .operatingFormBlock {
