page user list with inline menu, not finished yet.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/data/column/ImagePanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/data/column/ImagePanel.html
@@ -17,6 +17,6 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <img wicket:id="image"/>
+    <i wicket:id="image"/>
 </wicket:panel>
 </html>
