--- a/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
@@ -19,6 +19,10 @@ span.button-group {
   font-size: 0.8em;
 }
 
+form.search-form {
+  margin-top: 10px;
+}
+
 /* table panel sorting */
 th.sortable {
   span.sortableArrowIcon {
