--- a/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
+++ b/gui/admin-gui/src/main/webapp/less/midpoint/midpoint.less
@@ -7,6 +7,7 @@
 @import "page-login.less";
 @import "page-user-details.less";
 @import "page-dashboard.less";
+@import "page-debugs.less";
 
 span.button-group {
   display: inline-block;
