--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/AsyncDashboardPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/AsyncDashboardPanel.html
@@ -22,7 +22,7 @@
             <h3 class="panel-title"><i wicket:id="icon"></i>&nbsp;<span wicket:id="title"/></h3>
         </div>
         <div class="panel-body" wicket:id="dashboardContent">
-            <div wicket:id="preloaderContainer" style="text-align: center;">
+            <div wicket:id="preloaderContainer" style="margin: 10px 0; text-align: center;">
                 <img wicket:id="preloader"/>
                 <wicket:message key="AsyncDashboardPanel.loading"/>
             </div>
