user details page first redesign touches, will be finished in hundred years probably :)

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/TextAreaPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/TextAreaPanel.html
@@ -17,6 +17,6 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <textarea wicket:id="input" cols="34" rows="2" />
+    <textarea class="form-control" wicket:id="input" cols="34" rows="2" />
 </wicket:panel>
 </html>
