more simple css updated, now are user details not great but usable (until work is done)

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/DropDownChoicePanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/DropDownChoicePanel.html
@@ -17,6 +17,6 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <select wicket:id="input"/>
+    <select class="form-control input-sm" wicket:id="input"/>
 </wicket:panel>
 </html>
