header and button bar

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/Wizard.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/Wizard.html
@@ -18,7 +18,9 @@
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
     <form wicket:id="form" class="form-horizontal">
         <div wicket:id="steps"/>
+        <h2 wicket:id="header"/>
         <div wicket:id="view"/>
+        <div class="main-button-bar" wicket:id="buttons"/>
     </form>
 
 <!--<div class="wicketExtensionsWizard">-->
