--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/WizardButtonBar.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/WizardButtonBar.html
@@ -16,14 +16,24 @@
   -->
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
     <span class="button-group">
-        <input class="btn btn-danger" wicket:id="cancel" type="submit" value="cancel"/>
+        <button class="btn btn-danger" wicket:id="cancel" type="submit" value="cancel">
+            <wicket:message key="org.apache.wicket.extensions.wizard.cancel"/>
+        </button>
     </span>
     <span class="button-group">
-        <input class="btn btn-default" wicket:id="previous" type="submit" value="previous"/>
-        <input class="btn btn-primary" wicket:id="next" type="submit" value="next"/>
-        <input class="btn btn-primary" wicket:id="last" type="submit" value="last"/>
+        <button class="btn btn-default" wicket:id="previous" type="submit" value="previous">
+            <wicket:message key="org.apache.wicket.extensions.wizard.previous"/>
+        </button>
+        <button class="btn btn-primary" wicket:id="next" type="submit" value="next">
+            <wicket:message key="org.apache.wicket.extensions.wizard.next"/>
+        </button>
+        <button class="btn btn-primary" wicket:id="last" type="submit" value="last">
+            <wicket:message key="org.apache.wicket.extensions.wizard.last"/>
+        </button>
     </span>
     <span class="button-group">
-        <input class="btn btn-success" wicket:id="finish" type="submit" value="finish"/>
+        <button class="btn btn-success" wicket:id="finish" type="submit" value="finish">
+            <wicket:message key="org.apache.wicket.extensions.wizard.finish"/>
+        </button>
     </span>
 </wicket:panel>
